--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "tic-tac-toe2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://hujoseph99.github.io/sudoku",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "rc-slider": "^8.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
